--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "NodeJS Firebase authentication example",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "jest"
+    "dev": "nodemon app.js",
+    "test": "jest",
+    "lint": "npm run start && npm run dev"
   },
   "author": "bigdestroyer <hectorvallsmondragon@gmail.com>",
   "license": "ISC",
